--- a/aurora-frontend/package.json
+++ b/aurora-frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
     "@mui/system": "^7.3.2",
+    "lucide-react": "^0.545.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
