--- a/aurora-frontend/package.json
+++ b/aurora-frontend/package.json
@@ -16,12 +16,13 @@
     "@mui/material-nextjs": "^7.3.2",
     "@mui/system": "^7.3.2",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.13.2",
+    "clsx": "^2.0.0",
     "next": "15.5.3",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^2.0.0",
-    "clsx": "^2.0.0"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
